docs/error.txt
INFO:     Started reloader process [44300] using StatReload
C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\.venv\Lib\site-packages\pydantic\_internal\_config.py:321: UserWarning: Valid config keys have changed in V2:
* 'orm_mode' has been renamed to 'from_attributes'
  warnings.warn(message, UserWarning)
Process SpawnProcess-1:
Traceback (most recent call last):
  File "C:\Users\enriq\AppData\Local\Programs\Python\Python311\Lib\multiprocessing\process.py", line 314, in _bootstrap
    self.run()
  File "C:\Users\enriq\AppData\Local\Programs\Python\Python311\Lib\multiprocessing\process.py", line 108, in run   
    self._target(*self._args, **self._kwargs)
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\.venv\Lib\site-packages\uvicorn\_subprocess.py", line 76, in subprocess_started
    target(sockets=sockets)
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\.venv\Lib\site-packages\uvicorn\server.py", line 60, in run
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\AppData\Local\Programs\Python\Python311\Lib\asyncio\runners.py", line 190, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\AppData\Local\Programs\Python\Python311\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\AppData\Local\Programs\Python\Python311\Lib\asyncio\base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\.venv\Lib\site-packages\uvicorn\server.py", line 67, in serve
    config.load()
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\.venv\Lib\site-packages\uvicorn\config.py", line 477, in load
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\.venv\Lib\site-packages\uvicorn\importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\enriq\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1149, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\main.py", line 3, in <module>
    from app.routes.api import router as api_router
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\app\routes\api.py", line 2, in <module>    from app.routes import auth, users, bulls, races, sexes, roles, opus, inputs, outputs, produccion_embrionaria, 
calendar, transfer, informes, bull_performance, pagos, facturacion
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\app\routes\calendar.py", line 4, in <module>
    from app.services import calendar_service
  File "C:\Users\enriq\Desktop\ProyectoBioGenetic_avances\BiogeneticBackend\app\services\calendar_service.py", line 354
    if created_by:
                  ^
IndentationError: unindent does not match any outer indentation level
